[gd_scene load_steps=3 format=3 uid="uid://bdt3o20nmdbrh"]

[ext_resource type="Script" path="res://scenes/terrain/ground.gd" id="1_nrkc5"]
[ext_resource type="PackedScene" uid="uid://dd41h5etw6lss" path="res://scenes/terrain/chunk.tscn" id="2_jj2kr"]

[node name="Ground" type="Node2D"]
script = ExtResource("1_nrkc5")

[node name="Chunk1" parent="." instance=ExtResource("2_jj2kr")]
position = Vector2(-2000, 0)

[node name="Chunk2" parent="." instance=ExtResource("2_jj2kr")]

[node name="Chunk3" parent="." instance=ExtResource("2_jj2kr")]
position = Vector2(2000, 0)
